2006-09-26  Matthew Barnes  <mbarnes@redhat.com>

	* doc/reference/libgnomeui-docs.sgml: Make the API documentation
	easier to navigate (bug #357835).

2006-09-26  Matthew Barnes  <mbarnes@redhat.com>

	* libgnomeui/gnome_segv.c
	(main): Give up if bug-buddy itself has aborted (bug #353760).

2006-08-11  Matthias Clasen  <mclasen@redhat.com>

	* file-chooser/gtkfilesystemgnomevfs.c 
	(gtk_file_system_gnome_vfs_dispose): Don't call the locking
	idle from dispose, to avoid deadlock.  (RH #206058)

2006-09-04  Kristian Rietveld  <kris@imendio.com>

	* file-chooser/gtkfilesystemgnomevfs.c
	(get_folder_complete_operation): guard our newly created folder
	during callback invocation.

======================== 2.16.0 ===========================

2006-09-02  Kristian Rietveld  <kris@imendio.com>

	* file-chooser/gtkfilesystemgnomevfs.c
	(gtk_file_system_gnome_vfs_dispose), (queue_vfs_idle_callback),
	(gtk_file_system_gnome_vfs_init), (handle_cancel_operation_fn):
	remove pending execute_vfs_callbacks_idle and pending vfs async
	handles during dispose, execute all idle callbacks waiting to be
	run in the next idle,
	(gtk_file_system_gnome_vfs_get_folder),
	(gtk_file_system_gnome_vfs_cancel_operation),
	(gtk_file_systel_gnome_vfs_volume_mount),
	(execute_vfs_callbacks_idle), (queue_vfs_idle_callback): refactor
	to maintain a list of idle callbacks to call per file system instead
	of globally, guard the file system during callback invocation,
	(get_folder_file_info_callback), (get_file_info_callback),
	(create_folder_progress_cb): guard the file system during callback
	invocation,
	(gtk_file_folder_gnome_vfs_get_info): set GError if uri doesn't
	exist in the folder.

2006-08-25  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update
	* configure.in: Bump version
	* libgnomeui/gnome-client.c: Build fix for Solaris
	Damien Carberry. Closes bug #352274.
	* libgnomeui/gnome-icon-entry.c: Remove doubly included
	header.
	* libgnomeui/gnome-thumbnail-pixbuf-utils.c: Same.