@@ -953,12 +953,17 @@ get_desktop_link_uri (const char *desktop_uri,
   GKeyFile *desktop_file;
   char *ditem_url;
   char *tmp;
+  int tmpsize;
 
   ditem_url = NULL;
 
   desktop_file = g_key_file_new ();
-  tmp = gnome_vfs_get_local_path_from_uri (desktop_uri);
-  ret = g_key_file_load_from_file (desktop_file, tmp,
+  
+  ret = gnome_vfs_read_entire_file (desktop_uri, tmpsize, &tmp);
+  if (ret != GNOME_VFS_OK)
+    return NULL;
+
+  ret = g_key_file_load_from_data (desktop_file, tmp, strlen(tmp),
 				   G_KEY_FILE_KEEP_TRANSLATIONS, error);
   g_free (tmp);
 
@@ -2887,7 +2892,7 @@ gtk_file_folder_gnome_vfs_get_info (GtkFileFolder     *folder,
       char *uri;
 
       file_info = NULL;
-      uri = gtk_file_system_path_to_uri (folder_vfs->system, path);
+      uri = gtk_file_system_path_to_uri (GTK_FILE_SYSTEM (folder_vfs->system), path);
 
       g_set_error (error,
 		   GTK_FILE_SYSTEM_ERROR,
@@ -2978,12 +2983,17 @@ info_from_vfs_info (GtkFileSystemGnomeVFS  *system_vfs,
     {
       gboolean ret;
       gchar *tmp;
+      int tmpsize;
 
-      tmp = gnome_vfs_get_local_path_from_uri (uri);
-      desktop_file = g_key_file_new ();
-      ret = g_key_file_load_from_file (desktop_file, tmp,
-				       G_KEY_FILE_KEEP_TRANSLATIONS, error);
-      g_free (tmp);
+      ret = gnome_vfs_read_entire_file (uri, tmpsize, &tmp);
+
+      if (ret == GNOME_VFS_OK)
+      {
+        desktop_file = g_key_file_new ();
+	ret = g_key_file_load_from_data (desktop_file, tmp, strlen(tmp),
+                                       G_KEY_FILE_KEEP_TRANSLATIONS, error);
+        g_free (tmp);
+      }
     }
 
   /* Display name */
